# rusty-rooks

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  scaling.py
chess/: Cargo.toml
chess/src/: lib.rs  main.rs
client/: Cargo.toml  Dockerfile
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
src/: client.rs  lib.rs  server.rs
src/client/: mod.rs
src/server/: mod.rs
