[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
inquire = "0.7.5"
serde = "1.0.204"
serde_derive = "1.0.204"
bincode = "1.3.3"
colored = "2.1.0"
termion = "4.0.2"
spinners = "4.1.1"